--- a/index.html
+++ b/index.html
@@ -22,12 +22,30 @@
             and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. 
             I will not stop until I become the Web Development Hero.
         </p>
-        <a class="hire-me" href="#" target="_blank" >HIRE ME</a>
+        <a class="button" href="#" target="_blank" >HIRE ME</a>
     </div>
     <div class="half-width">
         <img src="my-bg.png" alt="image not show">
     </div>
     
+</section>
+
+<section class="dream-big">
+
+    <div class="half-width">
+        <img src="my-bg2.png" alt="not view">
+    </div>
+
+<div class="half-width">
+
+    <h1>Dream Big</h1>
+    <h2>Become a web developer</h2>
+    <p>I already learned the basic HTML and CSS. I can build any simple website. 
+        I can even teach my grandma how to make simple website. 
+        My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="button" href="#" target="_blank">DOWNLOAD RESUME</a>
+</div>
+
 </section>
 
 
