--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="header-all">
+<section class="header-all contener">
     <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="rubel-color">Rubel-Web</span>  World !</h1>
@@ -30,7 +30,7 @@
     
 </section>
 
-<section class="dream-big">
+<section class="dream-big contener">
 
     <div class="half-width">
         <img src="my-bg2.png" alt="not view">
@@ -48,6 +48,30 @@
 
 </section>
 
+
+
+<section class="experience-area">
+    <h1>  Experiences</h1>
+    <div class="contener">
+            <div class="ex-developer full-stack-web">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="rubel-color">2024-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    
+            </div>
+
+            <div class="ex-developer baby-web">
+                <h2>Baby Web Developer</h2>
+                <h3 class="rubel-color">2022-2024 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+</section>
+
+
+<footer class="footer-area">
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+</footer>
 
 
 </body>
